--- a/ProjectMC2-SLEEPTRACKER/Base.lproj/Main.storyboard
+++ b/ProjectMC2-SLEEPTRACKER/Base.lproj/Main.storyboard
@@ -581,7 +581,8 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <segue destination="1Pc-HE-b1w" kind="show" id="pdE-RL-nS5"/>
+                                    <action selector="StartSleepButton:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="cRY-bI-fb3"/>
+                                    <segue destination="1Pc-HE-b1w" kind="show" identifier="time" id="pdE-RL-nS5"/>
                                 </connections>
                             </button>
                             <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="snc-le-c41">
@@ -649,12 +650,16 @@
                             <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="cEy-bu-HKg">
                                 <rect key="frame" x="0.0" y="496" width="414" height="211"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="SleepTimePickerAction:" destination="1Pc-HE-b1w" eventType="valueChanged" id="LxO-Hq-Wsi"/>
+                                </connections>
                             </datePicker>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Th-4c-a8b">
                                 <rect key="frame" x="248" y="756" width="146" height="55"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button" image="mathematics"/>
                                 <connections>
+                                    <action selector="SleepTimeButtonAction:" destination="1Pc-HE-b1w" eventType="touchUpInside" id="8Ne-hg-jly"/>
                                     <segue destination="R4d-NB-x0m" kind="show" id="9EI-Is-Lc1"/>
                                 </connections>
                             </button>
@@ -667,6 +672,9 @@
                         <viewLayoutGuide key="safeArea" id="ryJ-AC-ai6"/>
                     </view>
                     <navigationItem key="navigationItem" id="mAU-q5-rXR"/>
+                    <connections>
+                        <outlet property="SleepTimePickerOutlet" destination="cEy-bu-HKg" id="7Ze-DX-vvy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mIq-xN-4nh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
